--- a/express-basic/package.json
+++ b/express-basic/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.15.5",
     "@babel/node": "7.15.4",
     "@babel/preset-env": "7.15.6",
+    "app-root-path": "3.0.0",
     "body-parser": "1.19.0",
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
